# ChangeLog for dev-lua/luaposix
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2012; James Rowe <jnrowe@gmail.com> luaposix-5.1.15.ebuild:
  Switched to mirror://github for SRC_URI.

  25 Nov 2011; James Rowe <jnrowe@gmail.com> -luaposix-5.1.11.ebuild,
  luaposix-5.1.15.ebuild:
  Keyworded x86.

  25 Nov 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.15.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*luaposix-5.1.15 (25 Oct 2011)

  25 Oct 2011; James Rowe <jnrowe@gmail.com> +luaposix-5.1.15.ebuild:
  Version bump [474].

  06 Sep 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.11.ebuild:
  Switched to EAPI 4.

  20 Jul 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.11.ebuild:
  QA: Minor quoting fixes.

  08 Jun 2011; James Rowe <jnrowe@gmail.com> -luaposix-5.1.9.ebuild,
  luaposix-5.1.11.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.11.ebuild:
  Keyworded amd64.

  31 May 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.11.ebuild:
  Switched to jnrowe-github eclass.

*luaposix-5.1.11 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com> +luaposix-5.1.11.ebuild,
  metadata.xml, watch:
  Version bump [352].

  08 May 2011; James Rowe <jnrowe@gmail.com> -luaposix-5.1.7.ebuild,
  luaposix-5.1.9.ebuild:
  Keyworded x86.

  08 May 2011; James Rowe <jnrowe@gmail.com> luaposix-5.1.9.ebuild:
  Keyworded amd64.

*luaposix-5.1.9 (08 Apr 2011)

  08 Apr 2011; James Rowe <jnrowe@gmail.com> +luaposix-5.1.9.ebuild:
  Version bump [320].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  13 Sep 2010; James Rowe <jnrowe@gmail.com> -luaposix-5.1.4.ebuild,
  luaposix-5.1.7.ebuild:
  Keyworded x86.

  13 Sep 2010; James Rowe <jnrowe@gmail.com> luaposix-5.1.7.ebuild:
  Keyworded amd64.

*luaposix-5.1.7 (15 Aug 2010)
