@@ -2,10 +2,11 @@
 Hash: SHA512
 
 DIST luaposix-5.1.15.tar.gz 422356 RMD160 5784329951948cda9f63972b06adcf59f848ff2e SHA1 bcaf8380c933ec32fc91ff2cedf70180c876a779 SHA256 43a4be3279f42cbfcba6f9ae5218d786246203133d4a73806a53f53f95d6241c
+DIST luaposix-5.1.17.tar.gz 455856 RMD160 093ef9e807c113dc63343ef06c313db7840e3c31 SHA1 21676eb6ea73b89ed2360cbb8eea63a64267e6fe SHA256 8767867f2e8846e888fbe49d11d5fdd6c6ca80ba3d3102cd98485d7f9485f600
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8RxdoACgkQzJrj3cAXR0l4rACgtnCKKZGybltWnxRi7Qod7o3c
-73gAoJjNBp5561qXWvfgQU0CkNfLIGn/
-=GDWX
+iEYEAREKAAYFAk9aWogACgkQzJrj3cAXR0k6+wCgiqWXY6Z1NKZTBaviCYeoa/pe
+MxYAoJk+EwvGmOJDKdgDLHALfEetUjwN
+=deJ3
 -----END PGP SIGNATURE-----
