@@ -16,4 +16,5 @@
  * Versions:
 
   * `5.1.15 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-lua/luaposix/luaposix-5.1.15.ebuild>`__  ``amd64``, ``x86``
+  * `5.1.17 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-lua/luaposix/luaposix-5.1.17.ebuild>`__  ``~amd64`` (due 2012-04-08), ``~x86`` (due 2012-04-08)
 
