@@ -30,6 +30,8 @@ REM 2012-04-01 *1 MSG %"Stabilise amd64 app-misc/hubugs-0.13.1%" %a
 REM 2012-04-01 *1 MSG %"Stabilise x86 app-misc/hubugs-0.13.1%" %a
 REM 2012-04-04 *1 MSG %"Stabilise amd64 dev-python/rstctl-0.4%" %a
 REM 2012-04-05 *1 MSG %"Stabilise amd64 dev-python/misaka-1.0.0%" %a
+REM 2012-04-08 *1 MSG %"Stabilise amd64 dev-lua/luaposix-5.1.17%" %a
+REM 2012-04-08 *1 MSG %"Stabilise x86 dev-lua/luaposix-5.1.17%" %a
 REM 2012-04-16 *1 MSG %"Stabilise amd64 dev-vcs/gitflow-0.4.1-r2%" %a
 REM 2012-04-23 *1 MSG %"Stabilise amd64 media-gfx/sphinxcontrib-mscgen-0.4%" %a
 REM 2012-04-23 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-mscgen-0.4%" %a
